# nucleo_wb15cc

./: CMakeLists.txt  Kconfig  README.md  prj.conf
STM32WB15XX_Copro_Wireless_Binaries/STM32WB1x/: Release_Notes.html
boards/: nucleo_wb15cc.overlay
inc/: app_ble.h  app_gpio.h  main.h
patch/nucleo_wb15cc_zephyr-v3.5.0_e30194/module/hal/stm32/: stm32wbxx.h.patch
patch/nucleo_wb15cc_zephyr-v3.5.0_e30194/zephyr/: zephyr.patch  zephyr_new_file.patch
src/: app_ble.c  app_gpio.c  main.c
